# qic

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.cargo/: config.toml
crates/qi-compiler/: Cargo.toml  build.rs
crates/qi-compiler/src/: lib.rs  versions.rs
crates/qi-compiler/src/cli/: arguments.rs  lexer.rs  main.rs
crates/qi-compiler/src/debug_config/: mod.rs
crates/qi-compiler/src/optimizer/: mod.rs
crates/qi-compiler/src/optimizer/settings/: mod.rs
crates/qi-compiler/src/yul/lexer/: mod.rs  token_kind.rs
crates/qi-compiler/src/yul/parser/: mod.rs  syntax_kind.rs
crates/qi-compiler/src/yul/parser/syntax_kind/: generated.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: codegen.rs  flags.rs  main.rs
crates/xtask/src/codegen/: grammar.rs
crates/xtask/src/codegen/grammar/: ast_src.rs  utils.rs
doc/: CallRust.sol  ERC20.sol  yul.ungram
test/: ERC20.sol  hello_world.sol
