[workspace]
resolver = "2"
members = [
  "crates/qi-compiler"
]

[workspace.dependencies]
hex = "0.4.3"
cc = "1.2"
libc = "0.2.169"
tempfile = "3.17"
anyhow = "1.0"
semver = { version = "1.0", features = ["serde"] }
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
regex = "1.10"
once_cell = "1.20"
num = "0.4.3"
sha1 = "0.10"
sha3 = "0.10"
thiserror = "2.0"
which = "7.0"
path-slash = "0.2"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
llvm-sys = { version = "201" }
