[package]
name = "qi-compiler"
version = "0.1.0"
edition = "2024"
description = "Solidity frontend for the Qi Compiler"

[[bin]]
name = "qic"
path = "src/cli/main.rs"

[[bin]]
name = "lexer"
path = "src/cli/lexer.rs"

[[bin]]
name = "grammar"
path = "src/cli/grammar.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
path-slash = "0.2"
anyhow = "1.0"
rayon = { version = "1.8", optional = true }
which = "*"


serde = "*"
serde_json = "*"
semver = "*"
itertools = "*"

revive-solc-json-interface = { git = "https://github.com/paritytech/revive", features = [
  "resolc",
] }
revive-common = { git = "https://github.com/paritytech/revive" }
llvm-sys = { version = "201" }

logos = "*"
rowan = "*"
num-derive = "*"
num-traits = "*"
ungrammar = "*"
either = "*"
proc-macro2 = "1.0.94"
quote = "1.0.40"

[features]
parallel = ["rayon"]
default = ["parallel"]

[build-dependencies]
git2 = "*"

[dev-dependencies]
logos-codegen = {version = "*", features = ["fuzzing"] }
regex-syntax = "*"
